<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Login Internationalization</string>
	<string name="title_activity_login">Sign in</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email</string>
	<string name="stringValue1">Login Internationation</string>
	<string name="stringValue2">English</string>
	<string name="stringValue3">Hindi</string>
	<string name="stringValue4">Username</string>
	<string name="stringValue5">Password</string>
	<string name="stringValue6">LOG IN</string>
    <string name="email_userid">Email/UserID</string>
    <string name="password">Password</string>

	<string name="hi_stringValue1">Login Internationation</string>
	<string name="hi_stringValue2">English</string>
	<string name="hi_stringValue3">Hindi</string>
	<string name="hi_stringValue4">Username</string>
	<string name="hi_stringValue5">Password</string>
	<string name="hi_stringValue6">LOG IN</string>
	<string name="hi_email_userid">Email/UserID</string>
	<string name="hi_password">Password</string>






</resources>